New Coming Soon Design

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Full Stack Junkie</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./scripts/main.js" defer></script>
   </head>
   <body>
-    <header class="coming-soon-container">
-      <h1 class="coming-soon-title">Coming Soon</h1>
-    </header>
+    <section class="coming-soon">
+      <h1 class="page-title">Coming Soon</h1>
+      <div class="inner-flex">
+        <div class="time-container">
+          <h3 class="time-days">Time</h3>
+          <h3>Days</h3>
+        </div>
+
+        <div class="time-container">
+          <h3 class="time-hours">Time</h3>
+          <h3>Hours</h3>
+        </div>
+
+        <div class="time-container">
+          <h3 class="time-minutes">Time</h3>
+          <h3>Minutes</h3>
+        </div>
+
+        <div class="time-container">
+          <h3 class="time-seconds">Time</h3>
+          <h3>Seconds</h3>
+        </div>
+      </div>
+      <img src="./images/hero-image.png" alt="hero illustration by freepik" />
+    </section>
   </body>
 </html>
